modifying fakeAPI
